# C-ML

./: .gitignore  README.md
src/DT/: dt.c  dt.h
src/DT/configs/: configs.yaml
src/Decision-Tree/: dt.c  dt.h
src/DeepLearning/: act_fn..h  dl.c  dl.h  layers.h  loss.h  models.h  optimizer.h  test.c
src/DeepLearning/tests/: autodiff_compute_test..c  feed_forward_test.c
src/KNN/: CMakeLists.txt  KNN.h  dataset.h  k_d_tree.h  knn.c  point.h  test.c  utils.h  vector.h
src/KNN/configs/: configs.yaml
src/PCA/: pca.h
src/SVM/LinearSVM/: svm.h
src/regression/LR/: lr.c  lr.h
src/utils/: autodifferentation.h  color.h  compute_graph.h  dataset.h  logger.h  matrix.h  point.h  raylib.h  tensor.h  utils.h  vector.h  visualizer  visualizer.c  visualizer.h  visualizer.h.gch
